--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.13",
     "axios": "^1.11.0",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.543.0",
     "react": "^19.1.1",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.1",
+    "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.8.2",
     "recharts": "^3.2.0",
+    "shadcn-ui": "^0.9.5",
     "tailwindcss": "^4.1.13"
   },
   "devDependencies": {
